react-router-dom Changes to be committed: 	modified:   .eslintrc.json 	new file:   public/img/accessibility.png 	new file:   public/img/check.png 	new file:   public/img/clock.png 	new file:   public/img/coin.png 	new file:   public/img/delete.png 	new file:   public/img/dislike.png 	new file:   public/img/down.png 	new file:   public/img/facebook.png 	new file:   public/img/greencheck.png 	new file:   public/img/heart.png 	new file:   public/img/instagram.png 	new file:   public/img/language.png 	new file:   public/img/like.png 	new file:   public/img/linkedin.png 	new file:   public/img/man.png 	new file:   public/img/message.png 	new file:   public/img/pinterest.png 	new file:   public/img/recycle.png 	new file:   public/img/search.png 	new file:   public/img/star.png 	new file:   public/img/twitter.png 	modified:   src/App.jsx 	new file:   src/App.scss 	new file:   src/components/featured/Featured.jsx 	new file:   src/components/featured/Featured.scss 	new file:   src/components/footer/Footer.jsx 	new file:   src/components/footer/Footer.scss 	modified:   src/components/navbar/Navbar.jsx 	modified:   src/components/navbar/Navbar.scss 	modified:   src/page/home/Home.jsx

--- a/src/components/navbar/Navbar.scss
+++ b/src/components/navbar/Navbar.scss
@@ -18,7 +18,7 @@
         display: flex;
         justify-content: space-between;
         padding: 20px 0px;
-        
+
         .logo {
             font-size: 34px;
             font-weight: bold;
@@ -37,6 +37,38 @@
             font-weight: 500;
             font-family: "Montserrat", sans-serif;
 
+            .user {
+                display: flex;
+                align-items: center;
+                gap: 10px;
+                cursor: pointer;
+                position: relative;
+                
+                img {
+                    width: 32px;
+                    height: 32px;
+                    border-radius: 50%;
+                    object-fit: cover;
+                }
+
+                .option {
+                    position: absolute;
+                    top: 50px;
+                    right: 0px;
+                    padding: 20px;
+                    background-color: white;
+                    border-radius: 10px;
+                    border: 1px solid lightgray;
+                    display: flex;
+                    flex-direction: column;
+                    gap: 10px;
+                    color: gray;
+                    width: 100px;
+                    font-weight: 300;
+
+                }
+            }
+
             button {
                 color: white;
                 padding: 10px 20px;
@@ -50,6 +82,7 @@
                     border-color: #1dbf73;
                 }
             }
+
         }
     }
 
