--- a/src/components/featured/Featured.scss
+++ b/src/components/featured/Featured.scss
@@ -17,6 +17,10 @@
 
             h1 {
                 font-size: 50px;
+
+                i {
+                    font-weight: 300;
+                }
             }
 
             .search {
@@ -57,10 +61,30 @@
             }
 
             .popular {
+                display: flex;
+                align-items: center;
+                gap: 10px;
+
                 span {}
-                button{}
+                button{
+                    color: white;
+                    background-color: transparent;
+                    border: 1px solid white;
+                    padding: 5px 10px;
+                    border-radius: 20px;
+                    font-size: 14px;
+                    cursor: pointer;
+                    
+                }
             }
         }
-        .right {}
+        .right {
+            height: 100%;
+
+            img {
+                height: 100%;
+                object-fit: contain;
+            }
+        }
     }
 }
